# elks

./: .gitignore  README.md  environment.yml
LearnC/: .gitignore  CMakeLists.txt  README.md  simple_nc4_rd.c
bayesian-optimization-example/: advanced_bo.py  basic_bo.py  exploitation_exploration_bo.py  visualization_bo.py
common-sense/: damForWater  dual.md  example1.md  intro.md  readme.md  simplex-iter.md  what-is-bitcoin.md
common-sense/else/: US-Water.md  contract.md  covid19-testing.md  locust.md  vpn.md  what-is-bitcoin.md
common-sense/hydology-basic/: Budyko-Intro.ipynb  Budyko-Intro.md  FAO56-Table11.csv  FAO56-Table12.csv  evapotranspiration1.ipynb  evapotranspiration2.ipynb  evapotranspiration2.md  evapotranspiration3.ipynb  evapotranspiration3.md  flood.ipynb  hydro_basic_compute.ipynb  (+4 more)
keras-examples/: sklearn_keras_kerasclassifier.py
latex-document/: README.md
learn-python/: data_structure_algorithm.py  data_structure_example.py  function_example.py  math_example.py
moea-example/: __init__.py
netcdf-rw-example/: README.md  darwin_2012.nc  netcdf_example.py
numpy-examples/: math_example.py  neural_network.py
numpy_examples/: math_example.py  vector_example.py
pandas-examples/: dataframe_examples.py
pandas_example/: dataframe_examples.py
pandas_examples/: dataframe_examples.py
paper-read/: how.md  info.md  read-guide.md
python_examples/: data_structure_example.py
pytorch-examples/: first_nn_regression.py  lstm_example.py  nn_classification.py  pytorch_nn_example.py  torch_follow_exmple.py
research-basics/: hydro-awesome-dl.md
sklearn-example/: basic_statistics.py
technology-basics/LearnCpp/rvarago-hello-cmake/: CMakeLists.txt
technology-basics/LearnCpp/rvarago-hello-cmake/includes/: person.hpp
technology-basics/LearnCpp/rvarago-hello-cmake/src/: main.cpp  person.cpp
(+316 files in other folders)
